--- a/backend/package.json
+++ b/backend/package.json
@@ -24,12 +24,16 @@
   "dependencies": {
     "@prisma/client": "^6.9.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/helmet": "^0.0.48",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/morgan": "^1.9.10",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "pg": "^8.16.0"
   }
 }
