--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,11 @@
     "@types/react": "^19.1.7",
     "@types/react-dom": "^19.1.6",
     "axios": "^1.9.0",
+    "highlight.js": "^11.11.1",
+    "marked": "^15.0.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
