--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.54.0",
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.9.0",
     "@types/bcryptjs": "^2.4.6",
