--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^3.1.0",
     "prisma": "^6.9.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.1",
     "typescript": "^5.4.5"
   },
   "dependencies": {
