--- a/backend/package.json
+++ b/backend/package.json
@@ -25,33 +25,33 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.0.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "joi": "^17.9.0",
-    "morgan": "^1.10.0",
-    "compression": "^1.7.4"
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/express": "^4.17.17",
-    "@types/cors": "^2.8.13",
     "@types/bcryptjs": "^2.4.2",
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
-    "@types/compression": "^1.7.2",
-    "@types/jest": "^29.5.0",
-    "typescript": "^5.0.0",
-    "ts-node": "^10.9.0",
-    "ts-node-dev": "^2.0.0",
-    "jest": "^29.5.0",
-    "prisma": "^5.0.0",
+    "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
-    "eslint": "^8.40.0"
+    "eslint": "^9.28.0",
+    "jest": "^29.5.0",
+    "prisma": "^5.0.0",
+    "ts-node": "^10.9.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0",
