--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.0.0",
+    "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -33,7 +34,8 @@
     "helmet": "^7.0.0",
     "joi": "^17.9.0",
     "jsonwebtoken": "^9.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "openai": "^5.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
