--- a/backend/package.json
+++ b/backend/package.json
@@ -46,6 +46,8 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
     "eslint": "^8.57.1",
     "jest": "^29.5.0",
     "prisma": "^5.0.0",
