--- a/backend/.env.example
+++ b/backend/.env.example
@@ -40,3 +40,70 @@ GOOGLE_AI_API_KEY=AIzaSyBukmPng3eujEQQO22PMAF__plue1iKl6Y
 GOOGLE_AI_MODEL=gemini-pro
 
 # Anthropic Configuration
+ANTHROPIC_API_KEY=your-anthropic-api-key
+ANTHROPIC_MODEL=claude-3-sonnet-20240229
+
+# Grok Configuration
+GROK_API_KEY=your-grok-api-key
+GROK_MODEL=grok-beta
+
+# ==============================================
+# File Upload Configuration
+# ==============================================
+MAX_FILE_SIZE=10485760
+UPLOAD_PATH=./uploads
+ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,application/pdf,text/plain
+
+# ==============================================
+# Redis Configuration (for caching and sessions)
+# ==============================================
+REDIS_URL=redis://localhost:6379
+REDIS_PASSWORD=
+REDIS_DB=0
+
+# ==============================================
+# Email Configuration
+# ==============================================
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-email-password
+EMAIL_FROM=noreply@haderboon.com
+
+# ==============================================
+# Logging Configuration
+# ==============================================
+LOG_LEVEL=info
+LOG_FILE_PATH=./logs
+
+# ==============================================
+# Security Configuration
+# ==============================================
+BCRYPT_ROUNDS=12
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# ==============================================
+# External Services
+# ==============================================
+# GitHub Integration (for code analysis)
+GITHUB_CLIENT_ID=ز
+GITHUB_CLIENT_SECRET=your-github-client-secret
+
+# GitLab Integration
+GITLAB_CLIENT_ID=your-gitlab-client-id
+GITLAB_CLIENT_SECRET=your-gitlab-client-secret
+
+# ==============================================
+# Monitoring and Analytics
+# ==============================================
+SENTRY_DSN=your-sentry-dsn
+GOOGLE_ANALYTICS_ID=your-ga-id
+
+# ==============================================
+# Development Configuration
+# ==============================================
+DEBUG=true
+ENABLE_CORS=true
+ENABLE_SWAGGER=true
