--- a/backend/.env.example
+++ b/backend/.env.example
@@ -88,7 +88,7 @@ RATE_LIMIT_MAX_REQUESTS=100
 # External Services
 # ==============================================
 # GitHub Integration (for code analysis)
-GITHUB_CLIENT_ID=ز
+GITHUB_CLIENT_ID=co123
 GITHUB_CLIENT_SECRET=your-github-client-secret
 
 # GitLab Integration
