--- a/backend/package.json
+++ b/backend/package.json
@@ -1,62 +1,144 @@
 {
   "name": "haderboon-backend",
   "version": "1.0.0",
-  "description": "Backend for Haderboon AI Agent Project",
+  "description": "Backend for Haderboon AI Documentation Agent",
   "main": "dist/server.js",
   "scripts": {
     "start": "node dist/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "nodemon src/server.ts",
     "build": "tsc",
+    "build:watch": "tsc --watch",
+    "clean": "rimraf dist",
     "test": "jest",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:seed": "ts-node prisma/seed.ts",
-    "prisma:studio": "prisma studio"
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "format": "prettier --write src/**/*.ts",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:seed": "ts-node prisma/seed.ts",
+    "db:reset": "prisma migrate reset",
+    "type-check": "tsc --noEmit"
   },
   "keywords": [
     "nodejs",
     "typescript",
     "express",
     "prisma",
-    "postgresql",
-    "ai-agent"
+    "ai",
+    "documentation",
+    "agent"
   ],
   "author": "Haderboon Team",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^6.9.0",
-    "axios": "^1.9.0",
-    "bcryptjs": "^2.4.3",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "@prisma/client": "^5.7.1",
     "express": "^4.18.2",
-    "helmet": "^7.0.0",
-    "joi": "^17.9.0",
-    "jsonwebtoken": "^9.0.0",
-    "morgan": "^1.10.0",
-    "openai": "^5.3.0"
+    "express-rate-limit": "^7.1.5",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "joi": "^17.11.0",
+    "winston": "^3.11.0",
+    "dotenv": "^16.3.1",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.0",
+    "axios": "^1.6.2",
+    "openai": "^4.20.1",
+    "@google/generative-ai": "^0.1.3",
+    "@anthropic-ai/sdk": "^0.9.1",
+    "nodemailer": "^6.9.7",
+    "redis": "^4.6.10",
+    "ioredis": "^5.3.2",
+    "express-validator": "^7.0.1",
+    "express-slow-down": "^2.0.1",
+    "express-session": "^1.17.3",
+    "uuid": "^9.0.1",
+    "crypto": "^1.0.1",
+    "markdown-it": "^14.0.0",
+    "highlight.js": "^11.9.0",
+    "sanitize-html": "^2.11.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/compression": "^1.7.2",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.0",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/morgan": "^1.9.4",
-    "@types/node": "^20.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.34.0",
-    "@typescript-eslint/parser": "^8.34.0",
-    "eslint": "^8.57.1",
-    "jest": "^29.5.0",
-    "prisma": "^6.9.0",
-    "ts-node": "^10.9.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.0"
+    "@types/node": "^20.10.4",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
+    "@types/nodemailer": "^6.4.14",
+    "@types/uuid": "^9.0.7",
+    "@types/jest": "^29.5.8",
+    "@types/supertest": "^2.0.16",
+    "@types/markdown-it": "^13.0.7",
+    "@types/sanitize-html": "^2.9.5",
+    "typescript": "^5.3.3",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "prisma": "^5.7.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "supertest": "^6.3.3",
+    "eslint": "^8.55.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "prettier": "^3.1.0",
+    "rimraf": "^5.0.5",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0"
   },
   "engines": {
     "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "npm": ">=9.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/c123ir/Haderboon.git"
+  },
+  "bugs": {
+    "url": "https://github.com/c123ir/Haderboon/issues"
+  },
+  "homepage": "https://github.com/c123ir/Haderboon#readme",
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run test"
+    }
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/src"
+    ],
+    "testMatch": [
+      "**/__tests__/**/*.ts",
+      "**/?(*.)+(spec|test).ts"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.ts",
+      "!src/**/*.d.ts",
+      "!src/server.ts"
+    ],
+    "coverageDirectory": "coverage",
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "html"
+    ]
   }
 }
