--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,13 @@
     "db:migrate": "prisma migrate dev",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "db:seed": "ts-node prisma/seed.ts",
-    "db:reset": "prisma migrate reset",
+    "db:seed": "npx tsx prisma/seed.ts",
+    "db:reset": "prisma migrate reset --force",
+    "db:deploy": "prisma migrate deploy",
     "type-check": "tsc --noEmit"
+  },
+  "prisma": {
+    "seed": "npx tsx prisma/seed.ts"
   },
   "keywords": [
     "nodejs",
@@ -83,6 +87,7 @@
     "typescript": "^5.3.3",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.1",
+    "tsx": "^4.6.2",
     "prisma": "^5.7.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
