--- a/backend/package.json
+++ b/backend/package.json
@@ -39,66 +39,66 @@
   "author": "Haderboon Team",
   "license": "MIT",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.9.1",
+    "@google/generative-ai": "^0.1.3",
     "@prisma/client": "^5.7.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "joi": "^17.11.0",
-    "winston": "^3.11.0",
-    "dotenv": "^16.3.1",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.0",
-    "axios": "^1.6.2",
-    "openai": "^4.20.1",
-    "@google/generative-ai": "^0.1.3",
-    "@anthropic-ai/sdk": "^0.9.1",
-    "nodemailer": "^6.9.7",
-    "redis": "^4.6.10",
-    "ioredis": "^5.3.2",
-    "express-validator": "^7.0.1",
-    "express-slow-down": "^2.0.1",
-    "express-session": "^1.17.3",
-    "uuid": "^9.0.1",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "markdown-it": "^14.0.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-session": "^1.17.3",
+    "express-slow-down": "^2.0.1",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "highlight.js": "^11.9.0",
-    "sanitize-html": "^2.11.0"
+    "ioredis": "^5.3.2",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "markdown-it": "^14.0.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "openai": "^4.20.1",
+    "redis": "^4.6.10",
+    "sanitize-html": "^2.11.0",
+    "sharp": "^0.33.0",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
+    "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.6",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/multer": "^1.4.11",
-    "@types/nodemailer": "^6.4.14",
-    "@types/uuid": "^9.0.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.8",
-    "@types/supertest": "^2.0.16",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/markdown-it": "^13.0.7",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.4",
+    "@types/nodemailer": "^6.4.14",
     "@types/sanitize-html": "^2.9.5",
-    "typescript": "^5.3.3",
-    "nodemon": "^3.0.2",
-    "ts-node": "^10.9.1",
-    "tsx": "^4.6.2",
-    "prisma": "^5.7.1",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "supertest": "^6.3.3",
-    "eslint": "^8.55.0",
+    "@types/supertest": "^2.0.16",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
-    "prettier": "^3.1.0",
-    "rimraf": "^5.0.5",
+    "eslint": "^8.55.0",
     "husky": "^8.0.3",
-    "lint-staged": "^15.2.0"
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.0",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.0",
+    "prisma": "^5.7.1",
+    "rimraf": "^5.0.5",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "tsx": "^4.20.2",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0",
