--- a/backend/.env
+++ b/backend/.env
@@ -1,15 +1,27 @@
-# Database
+# backend/.env
+
+# Database Configuration
 DATABASE_URL="postgresql://haderboon_user:2123@localhost:5432/haderboon_db"
 
-# JWT
-JWT_SECRET="haderboon_jwt_secret_key_2024"
+# JWT Configuration
+JWT_SECRET="haderboon_jwt_secret_key_2024_very_secure"
 JWT_EXPIRES_IN="24h"
 
-# Server
+# Server Configuration
 PORT=5550
 NODE_ENV="development"
 
-# AI APIs (به محض دریافت کلیدها تکمیل کنید)
+# File Upload Configuration
+MAX_FILE_SIZE="50mb"
+UPLOAD_DIR="./uploads"
+
+# AI APIs (فعلاً خالی - بعداً تکمیل می‌کنیم)
 GEMINI_API_KEY=""
 OPENROUTER_API_KEY=""
 OPENAI_API_KEY=""
+
+# CORS Configuration
+FRONTEND_URL="http://localhost:3550"
+
+# Logging
+LOG_LEVEL="info"
