--- a/backend/.env
+++ b/backend/.env
@@ -1,27 +1,5 @@
-# backend/.env
-
-# Database Configuration
-DATABASE_URL="postgresql://haderboon_user:2123@localhost:5432/haderboon_db"
-
-# JWT Configuration
-JWT_SECRET="haderboon_jwt_secret_key_2024_very_secure"
-JWT_EXPIRES_IN="24h"
-
-# Server Configuration
+NODE_ENV=development
 PORT=5550
-NODE_ENV="development"
-
-# File Upload Configuration
-MAX_FILE_SIZE="50mb"
-UPLOAD_DIR="./uploads"
-
-# AI APIs (فعلاً خالی - بعداً تکمیل می‌کنیم)
-GEMINI_API_KEY=""
-OPENROUTER_API_KEY=""
-OPENAI_API_KEY=""
-
-# CORS Configuration
-FRONTEND_URL="http://localhost:3550"
-
-# Logging
-LOG_LEVEL="info"
+DATABASE_URL="postgresql://haderboon_user:2123@localhost:5432/haderboon_db"
+JWT_SECRET=haderboon_jwt_secret_key_2024_very_secure_random_string
+JWT_EXPIRES_IN=24h
