--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.0",
+    "adm-zip": "^0.5.16",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -23,11 +24,12 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.5.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/multer": "^1.4.11",
+    "@types/multer": "^1.4.13",
     "@types/node": "^20.0.0",
     "@types/uuid": "^9.0.7",
     "nodemon": "^3.0.2",
