--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.0",
-    "yauzl": "^3.0.0",
+    "adm-zip": "^0.5.16",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -24,7 +24,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/yauzl": "^2.10.3",
+    "@types/adm-zip": "^0.5.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
