--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "adm-zip": "^0.5.16",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
+    "chokidar": "^4.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/adm-zip": "^0.5.7",
     "@types/bcryptjs": "^2.4.6",
+    "@types/chokidar": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
