--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,1 @@
-NODE_ENV=development
-PORT=5550
-DATABASE_URL="postgresql://haderboon_user:2123@localhost:5432/haderboon_db"
-JWT_SECRET=haderboon_jwt_secret_key_2024_very_secure_random_string
-JWT_EXPIRES_IN=24h
+DATABASE_URL="postgresql://postgres:admin@localhost:5432/haderboon_db"
