--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.6.1",
+    "react-treebeard": "^3.2.4",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
