--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,1 @@
-DATABASE_URL="postgresql://imac2019@localhost:5432/haderboon_db"
-PORT=5550
-NODE_ENV=development
-JWT_SECRET="haderboon_secret_key_2024"
+DATABASE_URL="postgresql://haderboon_user:2123@localhost:5432/haderboon_db"
